--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <div class="quiz-container">
     <div class="question"></div>
     <div class="options"></div>
-    <div class="result-info"></div>
-    <div class="more-info"></div>
+    <div class="result"></div>
+    <div class="more"></div>
     <button class="next-btn">Suivant</button>
   </div>
 
