--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="options"></div>
     <div class="result"></div>
     <div class="more"></div>
-    <button class="next-btn">Suivant</button>
+    <button class="next-btn"></button>
   </div>
 
 </body>
