--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Gluten:wght@400;600;800&family=Phudu:wght@400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Gluten:wght@400;600;800&family=Nunito:wght@400;600;800&family=Phudu:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="icon" href="./img/buddha.ico" type="image/x-icon">
   <title>Buddha Quiz</title>
 </head>
