--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <div class="answers option2"></div>
     <div class="answers option3"></div>
     <div class="answers option4"></div>
-    <div class="options"></div>
+    <div class="answers badAnswer"></div>
+    <div class="answers goodAnswer"></div>
     <div class="result"></div>
     <div class="more"></div>
     <button class="next-btn"></button>
