--- a/index.html
+++ b/index.html
@@ -27,20 +27,6 @@
     <button class="next-btn"></button>
   </div>
 
-  <!-- <div class="quiz-container">
-
-    <div class="question"></div>
-
-    <div class="option option1"></div>
-    <div class="option option2"></div>
-    <div class="option option3"></div>
-    <div class="option option4"></div>
-
-    <div class="feedback"></div>
-
-    <button class="next-btn">Start Quiz</button>
-
-  </div> -->
-
 </body>
 </html>
+<!-- By Yann GUIOT - Fullstack Web Developer -->
